--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
     <html>
     <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
     <link rel="manifest" href="files/manifest.json">
     <meta name="description" content="App de pelis">
     <meta name="theme-color" content="#1ABC9C">
